# python-learning

./: .coverage  .gitignore  README.md  clean.sh  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md  manifest.webmanifest
docs-site/: README.md  astro.config.mjs  package-lock.json  package.json
docs-site/.astro/: content-modules.mjs  data-store.json  settings.json
docs-site/src/content/docs/: index.md  index.mdx
docs-site/src/styles/: custom.css
docs/ch01_oop/: notes_01_foundation.md  notes_02_properties.md  notes_03_advanced.md  notes_04_pythonic.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
src/exercises/: main.py
src/exercises/ch01/: 01-exercises.md
src/exercises/ch01/e02/: temperature.py
src/exercises/ch01/e03/: bank_account.py
src/exercises/ch01/e04/: employee.py  full_time_employee.py  manager.py  part_time_employee.py  utils.py
src/exercises/ch01_oop/: README.md  exercise_01_01.py  exercise_04_01.py
src/exercises/ch01_oop/exercise_01_02/: employee.py  full_time_employee.py  manager.py  part_time_employee.py  utils.py
src/exercises/ch01_oop/exercise_04/: manager.py
src/exercises/ch01_oop/tests/: test_exercise_01.py  test_exercise_01_01.py  test_exercise_01_02.py  test_exercise_01_03.py  test_exercise_02.py  test_exercise_02_01.py  test_exercise_03.py  test_exercise_04.py
src/exercises/ch02_funcp/: exercise_2_4_1.py  exercise_2_4_2.py
test/ch01/: test_bank_account.py  test_rectangle.py  test_temperature.py
test/ch01/t04/: test_main.py  test_utils.py
(+40 files in other folders)
