[project]
name = "python-learning"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exercises"]

[tool.pytest.ini_options]
testpaths = ["src"]

[tool.ruff]
src = ["src"]